cloud/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crypto-mining
  labels:
    app: crypto-mining-platform
